--- a/lecture1.cabal
+++ b/lecture1.cabal
@@ -29,7 +29,7 @@ executable lecture1
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Chapter2.hs
+    other-modules: Chapter2
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
